@@ -4,6 +4,7 @@ Change Log:
 
 - Added Holy Point Shot (patch 2.5)
 - Fixed missing S6 calculation in Max Hit tab
+- Added Melee weapon types (Dagger, Sword, etc...)
 
 **2/24/16**
 
